--- a/src/DirectShowFrameGrabber/SConscript
+++ b/src/DirectShowFrameGrabber/SConscript
@@ -41,10 +41,18 @@ headers = globSourceFiles( '*.h' )
 sources = globSourceFiles( '*.cpp' ) 
 sources += globSourceFiles( '*.c' )
 
+for src in [ 'DirectShowInterfaces_i.c' ]:
+		sources.remove( src );
+
 # c)
-directShow_options = mergeOptions(utvision_all_options, utdataflow_all_options)
+framegrabber_options = mergeOptions(utvision_all_options, utdataflow_all_options, directshow_options)
 env = masterEnv.Clone()
-env.AppendUnique( **directShow_options )	
+env.AppendUnique( **framegrabber_options )	
+
+#if have_directshow:
+#env.AppendUnique(directshow_options)
+env.Append( CPPDEFINES = [ 'HAVE_DIRECTSHOW'] )
+
 env.AppendUnique( LIBS = [ "ole32", "oleaut32" ] )
 
 # d)
